--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/vite": "^4.0.7",
     "aos": "^2.3.4",
+    "cursor-effects": "^1.0.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
