--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/vite": "^4.0.7",
     "aos": "^2.3.4",
+    "axios": "^1.8.1",
     "cursor-effects": "^1.0.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-parallax-tilt": "^1.7.284",
     "react-router-dom": "^7.2.0",
